--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <button onclick="check()" class="btn btn-success">Identify Image</button>
       <br><br>
 
-      <p style="font-size: 22px;">Object : <span id="result_object_name"></span> </p>
+      <p style="font-size: 22px;">Person: <span id="result_object_name"></span> </p>
       <p style="font-size: 22px;">Accuracy : <span id="result_object_accuracy"></span> </p>
     </center>
 
